youtube-wrapped-chart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: youtube-wrapped-server
spec:
  # replicas: 2
  selector:
    matchLabels:
      app: youtube-wrapped-server
  template:
    metadata:
      labels:
        app: youtube-wrapped-server
    spec:
      containers:
        - name: youtube-wrapped-server
          image: burhanuddinmerchant/youtubewrapped-server:1.0.0
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 8000
